external-crates/move/crates/move-compiler/tests/move_2024/naming/unresolved_type_with_args.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_2024/naming/unresolved_type_with_args.move:2:5
  │
2 │     struct Mine<T, U> { f: Q<T, U>, g: X<U> }
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E03004]: unbound type
  ┌─ tests/move_2024/naming/unresolved_type_with_args.move:2:28
  │
2 │     struct Mine<T, U> { f: Q<T, U>, g: X<U> }
  │                            ^ Unbound type 'Q' in current scope

error[E03004]: unbound type
  ┌─ tests/move_2024/naming/unresolved_type_with_args.move:2:40
  │
2 │     struct Mine<T, U> { f: Q<T, U>, g: X<U> }
  │                                        ^ Unbound type 'X' in current scope

error[E03004]: unbound type
  ┌─ tests/move_2024/naming/unresolved_type_with_args.move:3:22
  │
3 │     fun foo<T, U>(_: S<T>): G<T, U> {
  │                      ^ Unbound type 'S' in current scope

error[E03004]: unbound type
  ┌─ tests/move_2024/naming/unresolved_type_with_args.move:3:29
  │
3 │     fun foo<T, U>(_: S<T>): G<T, U> {
  │                             ^ Unbound type 'G' in current scope

error[E03004]: unbound type
  ┌─ tests/move_2024/naming/unresolved_type_with_args.move:4:16
  │
4 │         let _: R<U> = (0: P<U, T>);
  │                ^ Unbound type 'R' in current scope

error[E03004]: unbound type
  ┌─ tests/move_2024/naming/unresolved_type_with_args.move:4:27
  │
4 │         let _: R<U> = (0: P<U, T>);
  │                           ^ Unbound type 'P' in current scope
